Jagdish/fixes (#279)
* fix: profile joined date

* fix: removing extra space in more button

* fix: hide icons for collection card

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -793,7 +793,6 @@
       @include setFont(var(--font-type-1), normal, 700, 14px, 17px, var(--dark));
       text-align: right;
       text-transform: capitalize;
-      margin-top: 32px;
       cursor: pointer;
     }
   }
@@ -879,6 +878,7 @@
 
 #notificationList{
   height: 215px;
+  //height: 188px;
   overflow-y: auto;
 }
 
